# Iapsibot-ROS2

./: .gitignore  Dockerfile  ReadMe.md  cmd.txt  docker-compose.yml  run_docker.ps1  run_docker.sh
STL_files/: Carrosserie.stl  dc_motor_and_wheel v1(Symétrie miroir).stl  dc_motor_and_wheel v1.stl
dependencies/: install_dep.sh
scripts/: image_create.zsh
src/iapsibot_interfaces_pkg/: CMakeLists.txt  package.xml
src/iapsibot_interfaces_pkg/msg/: SonarRanges.msg  Wheels.msg  wheels.msg
src/iapsibot_sim_pkg/: CMakeLists.txt  package.xml  robot_sim.xml
src/iapsibot_sim_pkg/include/iapsibot_sim_pkg/: robot_sim.hpp
src/iapsibot_sim_pkg/launch/: robot_launch.py
src/iapsibot_sim_pkg/resource/: robot_sim.urdf
src/iapsibot_sim_pkg/src/: robot_sim.cpp
src/iapsibot_sim_pkg/worlds/: iapsibot.proto  my_world.wbt
src/iapsibot_tests_pkg/: CMakeLists.txt  package.xml
src/iapsibot_tests_pkg/src/: test_com_publisher.cpp  test_com_suscriber.cpp
